2008-12-04  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Specify --exceptions=all in mdoc-update invocations.
	* exceptions.cs: Add support for documenting a *subset* of all
	  possible exceptions.  Subsets include: the member itself, the member
	  and methods it calls that are in the same assembly, and all possible
	  methods across all assemblies.
	* monodocer.cs: Allow --exceptions to take a SOURCES argument, to
	  control which location sources will be searched for exceptions.

2008-12-02  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Add --exceptions to `mdoc update` invocations to test
	  <exception/> generation.
	* mdoc.exe.sources: Add Mono.Documentation/exceptions.cs to the build.
	* Mono.Documentation/exceptions.cs: Added; searches through the
	  callgraph of an IMemberReference, recording which exception types
	  are created (and where they're created from).
	* Mono.Documentation/monodocer.cs: Generate <exception/> elements.
	* Test/DocTest-v1.cs: Modify some methods so that exceptions are
	  emitted (thus testing <exception/> generation).
	* Test/DocTest-v2.patch: Update (so patch(1) doesn't complain).
	* Test/en.expected.importecmadoc/System/Array.xml,
	  Test/en.expected.importecmadoc/System/Environment.xml,
	  Test/en.expected.importslashdoc/Mono.DocTest.Generic/GenericBase`1.xml,
	  Test/en.expected.importslashdoc/Mono.DocTest/DocAttribute.xml,
	  Test/en.expected.importslashdoc/Mono.DocTest/DocValueType.xml,
	  Test/en.expected.importslashdoc/Mono.DocTest/UseLists.xml,
	  Test/en.expected.importslashdoc/Mono.DocTest/Widget.xml,
	  Test/en.expected.importslashdoc/System/Array.xml,
	  Test/en.expected.importslashdoc/System/Environment.xml,
	  Test/en.expected.since/Mono.DocTest.Generic/GenericBase`1.xml,
	  Test/en.expected.since/Mono.DocTest/DocAttribute.xml,
	  Test/en.expected.since/Mono.DocTest/DocValueType.xml,
	  Test/en.expected.since/Mono.DocTest/UseLists.xml,
	  Test/en.expected.since/Mono.DocTest/Widget.xml,