@@ -31,20 +31,21 @@ class MDocToHtmlConverter : MDocCommand {
 	{
 		opts = new MDocToHtmlConverterOptions ();
 		var p = new OptionSet () {
+			{ "default-template",
+				"Writes the default XSLT to stdout.",
+				v => opts.dumptemplate = v != null },
 			{ "ext=",
 				"The file {EXTENSION} to use for created files.  "+
 					"This defaults to \"html\".",
 				v => opts.ext = v },
-			{ "template=",
-				"An XSLT {FILE} to use to generate the created " + 
-					"files.  If not specified, uses the template generated by --dump-template.",
-				v => opts.template = v },
-			{ "default-template",
-				"Writes the default XSLT to stdout.",
-				v => opts.dumptemplate = v != null },
 			{ "o|out=",
 				"The {DIRECTORY} to place the generated files and directories.",
 				v => opts.dest = v },
+			{ "template=",
+				"An XSLT {FILE} to use to generate the created " + 
+					"files.  If not specified, uses the template generated by " + 
+					"--default-template.",
+				v => opts.template = v },
 		};
 		List<string> extra = Parse (p, args, "export-html", 
 				"[OPTIONS]+ DIRECTORIES",
